fix: Resolved background pizzas not covering entire width of screen

--- a/views/css/style.css
+++ b/views/css/style.css
@@ -1,6 +1,6 @@
-/** {
+* {
   outline: 1px solid red !important;
-}*/
+}
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -48,4 +48,9 @@ form {
 
  .container {
   background-color: rgba(240, 60, 60, 0.8);
+}
+
+#movingPizzas1{
+  position: fixed;
+  z-index: -2;
 }
